--- a/_includes/i18n.liquid
+++ b/_includes/i18n.liquid
@@ -18,7 +18,7 @@
 	{% assign i18nText-goc = "Gouvernement du Canada" %}
 	{% assign i18nText-gocAltLang = '<span lang="en">Government of Canada</span>' %}
 
-	{% assign i18nText-searchSite = "Rechercher dans Canada.ca" %}
+	{% assign i18nText-searchSite = "Rechercher ARC" %}
 
 	{% assign i18nText-archived = "Nous avons archivé cette page et elle ne sera plus mise à jour." %}
 	{% assign i18nText-archived-desc = "Vous pouvez la consulter à des fins de recherche ou à titre de référence." %}
