--- a/_includes/resources-inc/footer.html
+++ b/_includes/resources-inc/footer.html
@@ -15,8 +15,16 @@
 	<script src="{{ page.script }}"></script>
 {%- endif -%}
 {% if page.testBanner == true or site.testBanner == true and page.testBanner != false %}
-<!-- START of github only scripts --->
-<script src="/core-prototype/source/scripts/git-dev-options-e.js"></script>
+{%- if i18nText-lang == "fr" -%}
+<!-- DÉBUT des scripts GitHub seulement --->
+{%- elsif i18nText-lang == "en" -%}
+<!-- START of GitHub only scripts --->
+{%- endif -%}
+<script src="/core-prototype/source/scripts/git-dev-options-{%- if i18nText-lang == "fr" -%}f{%- elsif i18nText-lang == "en" -%}e{%- endif -%}.js"></script>
 <script src="https://cra-design.github.io/core-prototype/tools/tinymce/tinymce.min.js"></script>
-<!-- END of github only scripts --->
+{%- if i18nText-lang == "fr" -%}
+<!-- FIN des scripts GitHub seulement --->
+{%- elsif i18nText-lang == "en" -%}
+<!-- END of GitHub only scripts --->
+{%- endif -%}
 {% endif %}
