--- a/_includes/header/header.html
+++ b/_includes/header/header.html
@@ -4,7 +4,7 @@
 <!-- START of GitHub only template section -->
 {%- endif -%}
 <data id="devoptions"{% if site.devOptionsLocStore != nil and site.devOptionsLocStore != "" %} data-loc-storage="{{ site.devOptionsLocStore }}"{% endif %} value="{{ site.developerOptions }}"></data>
-<data id="exitpage"{% if site.exitByURL != nil and site.exitByURL != "" %} data-exit-by-url="{{ site.exitByURL }}"{% endif %}{% if site.modifiedLinkList != nil and site.modifiedLinkList != "" %} data-mod-link-file="{{ site.modifiedLinkList }}"{% endif %} value="{% if page.exitPage != nil and page.exitPage != "" %}{{ page.exitPage }}{% elsif site.exitPage != nil and site.exitPage != "" %}{{ site.exitPage }}{% endif %}"></data>
+<data id="exitpage"{% if site.exitByURL != nil and site.exitByURL != "" %} data-exit-by-url="{{ site.exitByURL }}"{% endif %}{% if site.modifiedLinkList != nil and site.modifiedLinkList != "" %} data-mod-link-file="{{ site.modifiedLinkList }}"{% endif %} value="{% if page.exitPage != nil and page.exitPage != "" %}{{ page.exitPage }}{% elsif site.exitPage[page.lang] != nil and site.exitPage[page.lang] != "" %}{{ site.exitPage[page.lang] }}{% endif %}"></data>
 <data id="relextlnk" data-origin="{{ site.externalOrigin }}" value="{{ site.relativeExternalLinks }}"></data>
 {% if page.testBanner == true or site.testBanner == true and page.testBanner != false %}
 {% if page.sourceurl != nil %}<data id="sourceurl" value="[{%- for source in page.sourceurl -%}{%- if source.title != "" and source.link != "" -%}{% if forloop.first == false %}, {% endif %}&lcub;&quot;sourcelink&quot;: &quot;{{ source.link }}&quot;, &quot;sourcetitle&quot;: &quot;{{ source.title }}&quot;&rcub;{%- endif -%}{%- endfor -%}]"></data>{% endif %}
