--- a/resources/templates/template-cdts-e.html
+++ b/resources/templates/template-cdts-e.html
@@ -39,7 +39,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="true"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="https://cra-design.github.io/core-prototype/source/data/exclude-redirect-links.json" value="https://cra-design.github.io/source/exit-intent-e.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <data id="sourceurl" value="[{&quot;sourcelink&quot;: &quot;http://www.canada.ca/&quot;, &quot;sourcetitle&quot;: &quot;Canada Revenue Agency&quot;}]"></data>
+        <data id="notedlinks" value="[{&quot;sourcelink&quot;: &quot;http://www.canada.ca/&quot;, &quot;sourcetitle&quot;: &quot;Canada Revenue Agency&quot;}]"></data>
         <data id="pageKeywords" value=""></data>
         <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/core-prototype/source/includes/site-banner-e.inc"></div>
         <!-- END of GitHub only template section -->
