--- a/resources/templates/template-cdts-e.html
+++ b/resources/templates/template-cdts-e.html
@@ -19,7 +19,7 @@
         <meta name="dcterms.identifier" content="Canada_Revenue_Agency">
         <!-- Meta data -->
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
-        <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2024-09-kejimkujik.css">
+        <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
         <!-- START of GitHub only testing banner CSS -->
         <link rel="stylesheet" href="https://cra-design.github.io/core-prototype/source/css/testing-banner.css">
