--- a/resources/templates/template-cdts-e.html
+++ b/resources/templates/template-cdts-e.html
@@ -37,7 +37,7 @@
         <script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_4/cdts/compiled/wet-en.js"></script>
         <!-- START of GitHub only template section -->
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="true"></data>
-        <data id="exitpage" data-exit-by-url="false" data-mod-link-file="https://cra-design.github.io/core-prototype/source/data/exclude-redirect-links.json" value="https://cra-design.github.io/source/exit-intent-e.html"></data>
+        <data id="exitpage" data-exit-by-url="false" data-mod-link-file="https://cra-design.github.io/core-prototype/source/data/exclude-redirect-links.json" value="https://cra-design.github.io/core-prototype/source/exit-intent-e.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
         <data id="notedlinks" value="[{&quot;sourcelink&quot;: &quot;http://www.canada.ca/&quot;, &quot;sourcetitle&quot;: &quot;Canada Revenue Agency&quot;}]"></data>
         <data id="pageKeywords" value=""></data>
